ChangeLog 'ClusteringSuite'

YYYY-MM-DD  John Doe  <johndoe@example.com>

	* myfile.ext (myfunction): my changes made
	additional changes

	* myfile.ext (unrelated_change): my changes made
	to myfile.ext but completely unrelated to the above

	* anotherfile.ext (somefunction): more changes

2014-10-09 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Huge changes in the building system to maximize the use of 'rpaths'

2014-08-29 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Added new 'boost.m4' release

2014-08-28 Juan Gonzalez <juan.gonzalez@bsc.es> - 2.6.2
	* Corrected 'Initiliaze' of ClusteringConfiguration from the TreeDBSCAN
	side to match the new definitions

	* Added a new implementation of 'NewBurst' on 'TraceData' to avoid
	changes in the TreeDBSCAN side

	* Release to update the Extrae 3.0 compatibility

2014-08-28 German Llort <german.llort@bsc.es>
	* Edited debug messages in TreeDBSCAN

2014-06-06 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Solved a bug in 'ClusteredStatesPRVGenerator.cpp' when opening
	a burst region, that caused the duplication of the burst opening
	events in the output trace

2014-05-28 Juan Gonzalez <juan.gonzalez@bsc.es> - 2.6.1
	* Commit of the release 2.6.1

	* Changes in the autotools files, to ensure the distribution of the
	example and the documentation

2014-05-23 Juan Gonzalez <juan.gonzalez@bsc.es> 
	* Added 'example' and 'doc' folders and contens (example traces and
	XMLs and documentation sources)

	* In the different PRV trace generators .cpp files, added the Missing
	Data entry to the CLUSTERS_EVENTS_TXT define (that shouldn't be too
	replicated as it is now)	

2014-03-20 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Added the original K-means implementation source files 'asa136.*'

2014-02-03 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Commit of the 2.6.0 release

2013-09-04 Juan Gonzalez <juan.gonzalez@bsc.es>
	* First commit adding the 'PRVSemanticGuidedDataExtractor' files

2013-09-30 German Llort <german.llort@bsc.es>